# article-translator

./: Ellignger&Bostrom.md  main.py  output.md  output_translated.md  pyproject.toml  transloation.md
app/: __main__.py  api.py
app/core/: settings.py
app/file_processing/: file_reading.py  ocr.py
app/text_translation/: deepl_translate.py  markdown_translate.py
app/utils/: markdown_utils.py
