[project]
name = "article-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "markdown>=3.9",
    "pymupdf4llm>=0.0.27",
    "pypdf>=6.1.3",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
